# rockchip_mpp

./: CMakeLists.txt
debian/: .gitignore  README.Debian  README.source  changelog  files
doc/: mpp_design.txt
inc/: vpu.h  vpu_api.h
mpp/: CMakeLists.txt  mpi.cpp  mpp.cpp  mpp_info.cpp  svn_info.h
mpp/base/: mpp_buf_slot.cpp  mpp_buffer.cpp
mpp/codec/: mpp_dec.cpp  mpp_enc.cpp
mpp/codec/dec/h263/: h263d_api.c
mpp/codec/dec/h264/: h264d_api.c  h264d_dpb.c  h264d_global.h  h264d_init.c  h264d_parse.c  h264d_pps.c  h264d_rwfile.c  h264d_sei.c  h264d_slice.c  h264d_sps.c
mpp/codec/dec/h265/: h265d_parser.c  h265d_ps.c  h265d_refs.c  h265d_sei.c
mpp/codec/dec/h265/test/: CMakeLists.txt  h265d_parser_test.c
mpp/codec/dec/jpeg/: jpegd_parser.c
mpp/codec/dec/m2v/: m2vd_parser.c
mpp/codec/dec/mpg4/: mpg4d_api.c  mpg4d_parser.c
mpp/codec/dec/vp8/: vp8d_parser.c
mpp/codec/dec/vp9/: vp9d_parser.c
mpp/codec/enc/h264/src/: H264EncApi.c  H264Mad.c  H264RateControl.c  H264RateControl_new.c  encpreprocess.c  h264e_api.c
mpp/codec/inc/: vp8d_api.h
mpp/common/: h264d_log.h
mpp/hal/: CMakeLists.txt  mpp_hal.cpp
mpp/hal/inc/: mpp_hal.h
mpp/hal/rkdec/h264d/: CMakeLists.txt  hal_h264d_api.c  hal_h264d_rkv_pkt.c  hal_h264d_rkv_reg.c  hal_h264d_vdpu1_pkt.c  hal_h264d_vdpu1_pkt.h  hal_h264d_vdpu1_reg.c  hal_h264d_vdpu1_reg.h  hal_h264d_vdpu_pkt.c  hal_h264d_vdpu_reg.c
mpp/hal/rkdec/h265d/: hal_h265d_reg.c
mpp/hal/rkenc/h264e/: CMakeLists.txt  hal_h264e_api.c  hal_h264e_rkv.c  hal_h264e_vepu1.c  hal_h264e_vepu1.h  hal_h264e_vpu.c  hal_h264e_vpu.h  hal_h264e_vpu_common.h
mpp/hal/rkenc/h264e/test/: CMakeLists.txt
mpp/hal/vpu/jpegd/: hal_jpegd_reg.c
mpp/hal/vpu/m2vd/: hal_m2vd_reg.c
mpp/hal/vpu/vp8d/: CMakeLists.txt  hal_vp8d_api.c  hal_vp8d_base.h  hal_vp8d_reg.c  hal_vp8d_reg.h  hal_vp8d_vdpu1_reg.c  hal_vp8d_vdpu1_reg.h
mpp/hal/worker/libvpu/: vpu.c
mpp/hal/worker/mpp_device/: mpp_device.c
mpp/legacy/: CMakeLists.txt  rk_list.cpp  vpu.c  vpu_api.cpp  vpu_api_legacy.cpp  vpu_mem_legacy.c
mpp/test/: CMakeLists.txt  h264d_test.c  jpegd_test.c
mpp/vproc/iep/test/: CMakeLists.txt
mpp/vproc/rga/test/: CMakeLists.txt
osal/: CMakeLists.txt  mpp_list.cpp  mpp_log.cpp  mpp_mem.cpp  mpp_runtime.cpp  mpp_thread.cpp
osal/allocator/: allocator_drm.c  allocator_ion.c
osal/android/: os_allocator.c  os_env.c  os_log.c  os_mem.c
osal/inc/: mpp_log.h  mpp_mem.h  mpp_thread.h
osal/linux/: os_allocator.c  os_env.c  os_log.c  os_mem.c
osal/test/: CMakeLists.txt
osal/windows/: os_allocator.c  os_env.c  os_log.c  os_mem.c
test/: CMakeLists.txt  mpi_dec_test.c  vpu_api_test.c
utils/: CMakeLists.txt
